// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayMultiSelect renders 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
    >
      <div
        class="input-group-item"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-item d-contents input-group-item-shrink input-group-prepend"
            role="grid"
          />
          <div
            class="input-group-item input-group-prepend"
          >
            <input
              class="form-control-inset"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="sr-only"
      >
        <span
          id="clay-id-2"
        >
          Press backspace to delete the current row.
        </span>
        <span
          aria-live="polite"
          aria-relevant="text"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayMultiSelect renders a custom menu 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
    >
      <div
        class="input-group-item"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-item d-contents input-group-item-shrink input-group-prepend"
            role="grid"
          >
            <span
              class="label label-secondary"
              role="row"
              tabindex="-1"
            >
              <span
                aria-describedby="clay-id-10"
                class="label-item label-item-expand"
                id="clay-id-9-label-1-span"
                role="gridcell"
                style="outline: none;"
                tabindex="0"
              >
                foo
              </span>
              <span
                class="label-item label-item-after"
                role="gridcell"
              >
                <button
                  aria-label="Remove foo"
                  class="close"
                  id="clay-id-9-label-1-close"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times-small"
                    role="presentation"
                  >
                    <use
                      xlink:href="/foo/bar#times-small"
                    />
                  </svg>
                </button>
              </span>
            </span>
            <span
              class="label label-secondary"
              role="row"
              tabindex="-1"
            >
              <span
                aria-describedby="clay-id-10"
                class="label-item label-item-expand"
                id="clay-id-9-label-2-span"
                role="gridcell"
                style="outline: none;"
                tabindex="-1"
              >
                bar
              </span>
              <span
                class="label-item label-item-after"
                role="gridcell"
              >
                <button
                  aria-label="Remove bar"
                  class="close"
                  id="clay-id-9-label-2-close"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times-small"
                    role="presentation"
                  >
                    <use
                      xlink:href="/foo/bar#times-small"
                    />
                  </svg>
                </button>
              </span>
            </span>
            <span
              class="label label-secondary"
              role="row"
              tabindex="-1"
            >
              <span
                aria-describedby="clay-id-10"
                class="label-item label-item-expand"
                id="clay-id-9-label-3-span"
                role="gridcell"
                style="outline: none;"
                tabindex="-1"
              >
                baz
              </span>
              <span
                class="label-item label-item-after"
                role="gridcell"
              >
                <button
                  aria-label="Remove baz"
                  class="close"
                  id="clay-id-9-label-3-close"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times-small"
                    role="presentation"
                  >
                    <use
                      xlink:href="/foo/bar#times-small"
                    />
                  </svg>
                </button>
              </span>
            </span>
          </div>
          <div
            class="input-group-item input-group-prepend"
          >
            <input
              class="form-control-inset"
              type="text"
              value="one"
            />
          </div>
        </div>
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          aria-label="Clear All"
          class="component-action btn btn-monospaced btn-outline-borderless btn-outline-secondary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
      <div
        class="sr-only"
      >
        <span
          id="clay-id-10"
        >
          Press backspace to delete the current row.
        </span>
        <span
          aria-live="polite"
          aria-relevant="text"
        />
      </div>
    </div>
  </div>
  <div>
    <div>
      <div
        aria-hidden="true"
        class="dropdown-menu autocomplete-dropdown-menu"
        role="presentation"
        style="max-width: none;"
      >
        <ul
          class="list-unstyled"
          role="menu"
        >
          <li
            role="presentation"
          >
            <button
              class="dropdown-item"
              role="menuitem"
            >
              <strong>
                one
              </strong>
              <p>
                Name
              </p>
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayMultiSelect renders as disabled 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
    >
      <div
        class="input-group-item"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-item d-contents input-group-item-shrink input-group-prepend"
            role="grid"
          >
            <span
              class="label label-secondary"
              role="row"
              tabindex="-1"
            >
              <span
                aria-describedby="clay-id-8"
                class="label-item label-item-expand"
                id="clay-id-7-label-1-span"
                role="gridcell"
                style="outline: none;"
                tabindex="0"
              >
                foo
              </span>
              <span
                class="label-item label-item-after"
                role="gridcell"
              >
                <button
                  aria-label="Remove foo"
                  class="close"
                  disabled=""
                  id="clay-id-7-label-1-close"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times-small"
                    role="presentation"
                  >
                    <use
                      xlink:href="/foo/bar#times-small"
                    />
                  </svg>
                </button>
              </span>
            </span>
            <span
              class="label label-secondary"
              role="row"
              tabindex="-1"
            >
              <span
                aria-describedby="clay-id-8"
                class="label-item label-item-expand"
                id="clay-id-7-label-2-span"
                role="gridcell"
                style="outline: none;"
                tabindex="-1"
              >
                bar
              </span>
              <span
                class="label-item label-item-after"
                role="gridcell"
              >
                <button
                  aria-label="Remove bar"
                  class="close"
                  disabled=""
                  id="clay-id-7-label-2-close"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times-small"
                    role="presentation"
                  >
                    <use
                      xlink:href="/foo/bar#times-small"
                    />
                  </svg>
                </button>
              </span>
            </span>
            <span
              class="label label-secondary"
              role="row"
              tabindex="-1"
            >
              <span
                aria-describedby="clay-id-8"
                class="label-item label-item-expand"
                id="clay-id-7-label-3-span"
                role="gridcell"
                style="outline: none;"
                tabindex="-1"
              >
                baz
              </span>
              <span
                class="label-item label-item-after"
                role="gridcell"
              >
                <button
                  aria-label="Remove baz"
                  class="close"
                  disabled=""
                  id="clay-id-7-label-3-close"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times-small"
                    role="presentation"
                  >
                    <use
                      xlink:href="/foo/bar#times-small"
                    />
                  </svg>
                </button>
              </span>
            </span>
          </div>
          <div
            class="input-group-item input-group-prepend"
          >
            <input
              class="form-control-inset"
              disabled=""
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="sr-only"
      >
        <span
          id="clay-id-8"
        >
          Press backspace to delete the current row.
        </span>
        <span
          aria-live="polite"
          aria-relevant="text"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayMultiSelect renders as not valid 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
    >
      <div
        class="input-group-item"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-item d-contents input-group-item-shrink input-group-prepend"
            role="grid"
          >
            <span
              class="label label-secondary"
              role="row"
              tabindex="-1"
            >
              <span
                aria-describedby="clay-id-6"
                class="label-item label-item-expand"
                id="clay-id-5-label-1-span"
                role="gridcell"
                style="outline: none;"
                tabindex="0"
              >
                foo
              </span>
              <span
                class="label-item label-item-after"
                role="gridcell"
              >
                <button
                  aria-label="Remove foo"
                  class="close"
                  id="clay-id-5-label-1-close"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times-small"
                    role="presentation"
                  >
                    <use
                      xlink:href="/foo/bar#times-small"
                    />
                  </svg>
                </button>
              </span>
            </span>
            <span
              class="label label-secondary"
              role="row"
              tabindex="-1"
            >
              <span
                aria-describedby="clay-id-6"
                class="label-item label-item-expand"
                id="clay-id-5-label-2-span"
                role="gridcell"
                style="outline: none;"
                tabindex="-1"
              >
                bar
              </span>
              <span
                class="label-item label-item-after"
                role="gridcell"
              >
                <button
                  aria-label="Remove bar"
                  class="close"
                  id="clay-id-5-label-2-close"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times-small"
                    role="presentation"
                  >
                    <use
                      xlink:href="/foo/bar#times-small"
                    />
                  </svg>
                </button>
              </span>
            </span>
            <span
              class="label label-secondary"
              role="row"
              tabindex="-1"
            >
              <span
                aria-describedby="clay-id-6"
                class="label-item label-item-expand"
                id="clay-id-5-label-3-span"
                role="gridcell"
                style="outline: none;"
                tabindex="-1"
              >
                baz
              </span>
              <span
                class="label-item label-item-after"
                role="gridcell"
              >
                <button
                  aria-label="Remove baz"
                  class="close"
                  id="clay-id-5-label-3-close"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times-small"
                    role="presentation"
                  >
                    <use
                      xlink:href="/foo/bar#times-small"
                    />
                  </svg>
                </button>
              </span>
            </span>
          </div>
          <div
            class="input-group-item input-group-prepend"
          >
            <input
              class="form-control-inset"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          aria-label="Clear All"
          class="component-action btn btn-monospaced btn-outline-borderless btn-outline-secondary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
      <div
        class="sr-only"
      >
        <span
          id="clay-id-6"
        >
          Press backspace to delete the current row.
        </span>
        <span
          aria-live="polite"
          aria-relevant="text"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`ClayMultiSelect renders with items 1`] = `
<body>
  <div>
    <div
      class="form-control form-control-tag-group input-group"
    >
      <div
        class="input-group-item"
      >
        <div
          class="input-group"
        >
          <div
            class="input-group-item d-contents input-group-item-shrink input-group-prepend"
            role="grid"
          >
            <span
              class="label label-secondary"
              role="row"
              tabindex="-1"
            >
              <span
                aria-describedby="clay-id-4"
                class="label-item label-item-expand"
                id="clay-id-3-label-1-span"
                role="gridcell"
                style="outline: none;"
                tabindex="0"
              >
                foo
              </span>
              <span
                class="label-item label-item-after"
                role="gridcell"
              >
                <button
                  aria-label="Remove foo"
                  class="close"
                  id="clay-id-3-label-1-close"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times-small"
                    role="presentation"
                  >
                    <use
                      xlink:href="/foo/bar#times-small"
                    />
                  </svg>
                </button>
              </span>
            </span>
            <span
              class="label label-secondary"
              role="row"
              tabindex="-1"
            >
              <span
                aria-describedby="clay-id-4"
                class="label-item label-item-expand"
                id="clay-id-3-label-2-span"
                role="gridcell"
                style="outline: none;"
                tabindex="-1"
              >
                bar
              </span>
              <span
                class="label-item label-item-after"
                role="gridcell"
              >
                <button
                  aria-label="Remove bar"
                  class="close"
                  id="clay-id-3-label-2-close"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times-small"
                    role="presentation"
                  >
                    <use
                      xlink:href="/foo/bar#times-small"
                    />
                  </svg>
                </button>
              </span>
            </span>
            <span
              class="label label-secondary"
              role="row"
              tabindex="-1"
            >
              <span
                aria-describedby="clay-id-4"
                class="label-item label-item-expand"
                id="clay-id-3-label-3-span"
                role="gridcell"
                style="outline: none;"
                tabindex="-1"
              >
                baz
              </span>
              <span
                class="label-item label-item-after"
                role="gridcell"
              >
                <button
                  aria-label="Remove baz"
                  class="close"
                  id="clay-id-3-label-3-close"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-times-small"
                    role="presentation"
                  >
                    <use
                      xlink:href="/foo/bar#times-small"
                    />
                  </svg>
                </button>
              </span>
            </span>
          </div>
          <div
            class="input-group-item input-group-prepend"
          >
            <input
              class="form-control-inset"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="input-group-item input-group-item-shrink"
      >
        <button
          aria-label="Clear All"
          class="component-action btn btn-monospaced btn-outline-borderless btn-outline-secondary"
          title="Clear All"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-times-circle"
            role="presentation"
          >
            <use
              xlink:href="/foo/bar#times-circle"
            />
          </svg>
        </button>
      </div>
      <div
        class="sr-only"
      >
        <span
          id="clay-id-4"
        >
          Press backspace to delete the current row.
        </span>
        <span
          aria-live="polite"
          aria-relevant="text"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Interactions Use custom function for filtering autocomplete results 1`] = `
<div
  aria-hidden="true"
  class="dropdown-menu autocomplete-dropdown-menu"
  role="presentation"
  style="max-width: none; width: 0px;"
>
  <ul
    class="list-unstyled"
    role="menu"
  >
    <li
      role="presentation"
    >
      <button
        class="dropdown-item"
        role="menuitem"
      >
        <strong>
          b
        </strong>
        <strong>
          a
        </strong>
        <strong>
          r
        </strong>
      </button>
    </li>
  </ul>
</div>
`;

exports[`Interactions Use custom function for filtering autocomplete results 2`] = `
<div
  aria-hidden="true"
  class="dropdown-menu autocomplete-dropdown-menu"
  role="presentation"
  style="max-width: none; width: 0px;"
>
  <ul
    class="list-unstyled"
    role="menu"
  >
    <li
      role="presentation"
    >
      <button
        class="dropdown-item"
        role="menuitem"
      >
        foo
      </button>
    </li>
  </ul>
</div>
`;
